--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,14 @@ jobs:
           manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
           download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.zip
 
-      - run: zip -r ./module.zip module.json README.md LICENSE lib/ styles/ scripts/ templates/ languages/
+      # Install packages
+      - run: npm install
+
+      # Build distribution
+      - run: npm run build
+
+      # Create a zip file with all files required by the module to add to the release
+      - run: zip -r ./module.zip module.json README.md LICENSE dist/ styles/ templates/ languages/
 
       - name: Update Release with Files
         id: create_version_release
