--- a/package.json
+++ b/package.json
@@ -1,37 +1,25 @@
 {
-  "name": "fvtt-change-log",
-  "version": "0.3.0",
-  "description": "A Foundry VTT module to log changes to the chat log",
-  "main": "scripts/change-log.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "eslint": "eslint ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Larkinabout/fvtt-change-log.git"
-  },
-  "author": "Larkinabout",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Larkinabout/fvtt-change-log/issues"
-  },
-  "homepage": "https://github.com/Larkinabout/fvtt-change-log#readme",
-  "dependencies": {
-    "@yaireo/dragsort": "^1.3.2",
-    "@yaireo/tagify": "^4.33.0",
-    "create-vite": "^4.4.1",
-    "rollup": "^3.26.3"
+    "build": "npm run build:main",
+    "build:main": "rollup -c"
   },
   "devDependencies": {
-    "eslint": "^8.45.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "vite": "^4.4.7"
+    "@babel/core": "^7.26.8",
+    "@babel/eslint-parser": "^7.26.8",
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@yaireo/dragsort": "^1.3.2",
+    "@yaireo/tagify": "^4.31.3",
+    "eslint": "^9.20.1",
+    "eslint-plugin-custom-eslint-rules": "file:./custom-eslint-rules",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.2.4",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0",
+    "globals": "^16.2.0",
+    "less": "^4.2.0",
+    "rollup": "^3.26.3"
   }
 }
